--- a/public/privacy-policy/index.html
+++ b/public/privacy-policy/index.html
@@ -117,7 +117,7 @@
         <div class="lh166">
             <h2 class="pb-12"><strong>1. Informacje ogólne</strong></h2>
             <ol>
-                <li>Niniejsza polityka dotyczy Serwisu www, funkcjonującego pod adresem url: <b>todo-addres</b></li>
+                <li>Niniejsza polityka dotyczy Serwisu www, funkcjonującego pod adresem url: <b>http://default-balancer-1304401560.us-east-1.elb.amazonaws.com/</b></li>
                 <li>Operatorem serwisu oraz Administratorem danych osobowych jest: Michal58 </li>
 
                 <li>Adres kontaktowy poczty elektronicznej operatora: kaluski.michal58@gmail.com</li>
